style(carousel): fix padding on mobile resolution

--- a/packages/ui-core/src/components/Carousel/Carousel.less
+++ b/packages/ui-core/src/components/Carousel/Carousel.less
@@ -46,7 +46,7 @@
             margin-right: -16px;
             margin-left: -16px;
             padding-right: 32px;
-            padding-left: 32px;
+            padding-left: 16px;
         }
     }
 
